--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@ashwamegh/vue-link-preview": "^3.3.0"
+    "@ashwamegh/vue-link-preview": "^3.3.0",
+    "joi": "^17.13.3",
+    "vue": "^3.5.13"
   }
 }
