--- a/WEB/Front-end/package.json
+++ b/WEB/Front-end/package.json
@@ -8,7 +8,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "resolutions": {
+  "ajv": "6.5.5"
+},
   "dependencies": {
+    "ajv": "6.8.1",
     "axios": "^1.9.0",
     "joi": "^17.13.3",
     "vue": "^3.5.13",
