AI part complete

--- a/WEB/Back-end/nginx/default.conf
+++ b/WEB/Back-end/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
         listen 8091;
-
+        client_max_body_size 20M;
         location / {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
