--- a/WEB/Back-end/nginx/default.conf
+++ b/WEB/Back-end/nginx/default.conf
@@ -9,6 +9,17 @@ server {
            
             proxy_pass http://django:8090; # redirect the request to port 8000
         }
+        location /data/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+           
+            proxy_pass http://django:8090/data/; # redirect the request to port 8000
+            allow 127.0.0.1;
+            allow 172.23.0.1;
+            deny all;
+        }
 
         location /static {
             alias /docker/Newsis-Newsletter/WEB/Back-end/static/;
