Revise to solve CORS error

--- a/WEB/Back-end/nginx/default.conf
+++ b/WEB/Back-end/nginx/default.conf
@@ -16,10 +16,9 @@ server {
             proxy_set_header X-Forwarded-Proto $scheme;
            
             proxy_pass http://django:8090/data/; # redirect the request to port 8000
-            #allow 127.0.0.1;
-            #allow 172.23.0.1;
-            #deny all;
-            allow all;
+            allow 127.0.0.1;
+            allow 172.23.0.1;
+            deny all;
         }
 
         location /static {
